--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,9 @@
         <item name="android:statusBarColor">@android:color/black</item>
         <item name="android:windowLightStatusBar" >false</item>
     </style>
+    <style name="Theme.App.Starting" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/bg_color</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_circle_welcome</item>
+        <item name="postSplashScreenTheme">@style/Theme.HerbaMedJabar</item>
+    </style>
 </resources>
