--- a/app/src/main/res/layout/fragment_forum.xml
+++ b/app/src/main/res/layout/fragment_forum.xml
@@ -82,12 +82,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Mulai Berbagi!"
+                android:textSize="14sp"
                 android:textColor="@color/primary"
                 android:textStyle="bold"
                 />
 <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+    android:textSize="14sp"
                 android:text="Bagikan penemuan herbal anda"
     android:textColor="@color/primary"
     android:textStyle="normal"
