--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -50,7 +50,18 @@
          app:layout_constraintTop_toBottomOf="@id/tv_username"
          tools:text="2 hours ago" />
 
-     <!-- Post Image -->
+     <ImageView
+         android:id="@+id/iv_menu_options"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_marginEnd="16dp"
+         android:src="@drawable/ic_plus"
+         android:visibility="gone"
+         app:layout_constraintBottom_toBottomOf="@+id/iv_user_profile"
+         app:layout_constraintEnd_toEndOf="parent"
+         app:layout_constraintTop_toTopOf="@+id/iv_user_profile"
+         tools:visibility="visible" />
+
      <ImageView
          android:id="@+id/iv_post_image"
          android:layout_width="0dp"
