--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -55,7 +55,7 @@
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="16dp"
-         android:src="@drawable/ic_plus"
+         android:src="@drawable/ic_trash"
          android:visibility="gone"
          app:layout_constraintBottom_toBottomOf="@+id/iv_user_profile"
          app:layout_constraintEnd_toEndOf="parent"
