--- a/app/src/main/res/drawable/custom_card_info.xml
+++ b/app/src/main/res/drawable/custom_card_info.xml
@@ -2,4 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="10dp"/>
     <solid android:color="#FBFEFC"/>
+    <stroke android:width="0.3dp" android:color="#f4f4f4"/>
 </shape>
