--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -45,10 +45,11 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/iv_profile_picture"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_marginStart="24dp"
-            android:src="@drawable/ic_user_image2"
+            android:src="@drawable/ic_user_image_circular"
+            app:civ_border_width="2dp"
             app:civ_border_color="@android:color/white"
             app:layout_constraintBottom_toBottomOf="@id/iv_banner"
             app:layout_constraintStart_toStartOf="parent"
