--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -52,10 +52,10 @@
 
      <ImageView
          android:id="@+id/iv_menu_options"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
+         android:layout_width="18dp"
+         android:layout_height="18dp"
          android:layout_marginEnd="16dp"
-         android:src="@drawable/ic_trash"
+         android:src="@drawable/ic_more_hori"
          android:visibility="gone"
          app:layout_constraintBottom_toBottomOf="@+id/iv_user_profile"
          app:layout_constraintEnd_toEndOf="parent"
