--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -131,6 +131,14 @@
 
         </LinearLayout>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.8dp"
+            app:layout_constraintBottom_toTopOf="@id/tv_my_posts_title"
+            android:background="#D9D9D9"
+            android:layout_marginBottom="10dp"
+            />
+
         <TextView
             android:id="@+id/tv_my_posts_title"
             android:layout_width="0dp"
