--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -159,6 +159,58 @@
                     app:cornerRadius="12dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/orLayout" />
+
+                <LinearLayout
+                    android:id="@+id/orLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="16dp"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="1dp"
+                        android:layout_weight="1"
+                        android:background="#D9D9D9" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:text="atau"
+                        android:textColor="@color/text_muted_foreground" />
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="1dp"
+                        android:layout_weight="1"
+                        android:background="#D9D9D9" />
+
+                </LinearLayout>
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/loginWithGoogleButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:backgroundTint="@color/white"
+                    android:text="Lanjutkan dengan Google"
+                    android:textSize="12sp"
+                    android:textColor="@color/text_muted_foreground"
+                    android:textStyle="normal"
+                    app:icon="@drawable/ic_google"
+                    app:iconGravity="textEnd"
+                    app:iconTint="@color/common_google_signin_btn_tint"
+                    app:iconTintMode="add"
+                    app:iconSize="18dp"
+                    app:strokeColor="@color/text_muted_foreground"
+                    app:strokeWidth="0.5dp"
+                    app:cornerRadius="12dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/passwordInputLayout" />
 
                 <LinearLayout
@@ -170,7 +222,7 @@
                     android:layout_gravity="center"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/loginButton">
+                    app:layout_constraintTop_toBottomOf="@id/loginWithGoogleButton">
 
                     <TextView
                         android:layout_width="wrap_content"
